--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
@@ -65,7 +65,7 @@
         <div class="top_1">
             <div class="baner">
                 <div class="baner_img">
-                    <img src="assets/img/baner.jpg" alt="банер">
+                    <img src="baner.jpg" alt="банер">
                 </div>
                 <div class="baner_text">
                     <h1>Онлайн школа</h1>
@@ -89,7 +89,7 @@
             </div>
             <div class="learn_foto">
                 <h4>Так проходят наши занятия</h4>
-                <img src="assets/img/learning.jpg" alt="">
+                <img src="learning.jpg" alt="">
             </div>
         </section>
 
@@ -97,21 +97,21 @@
         <div class="cart">
             <div class="cartOne">
                 <h3>Новичок</h3>
-                <img src="assets/img/novichok.svg" alt="" class="cart_img">
+                <img src="novichok.svg" alt="" class="cart_img">
                 <div class="cartTwo">
                     <a href="#" class="button">Записаться</a>
                 </div>
             </div>
             <div class="cartOne">
                 <h3>Продвинутый</h3>
-                <img src="assets/img/dvinut.svg" alt="" class="cart_img">
+                <img src="dvinut.svg" alt="" class="cart_img">
                 <div class="cartTwo">
                     <a href="#" class="button">Записаться</a>
                 </div>
             </div>
             <div class="cartOne">
                 <h3>Мастер</h3>
-                <img src="assets/img/master.svg" alt="" class="cart_img">
+                <img src="master.svg" alt="" class="cart_img">
                 <div class="cartTwo">
                     <a href="#" class="button">Записаться</a>
                 </div>
@@ -119,7 +119,7 @@
 
         </div>
         <section class="delivery">
-            <img src="assets/img/map.jpg" alt="">
+            <img src="map.jpg" alt="">
         </section>
 
 
